[project]
name = "simulatedc"
version = "0.1.0"
description = "GTP（Goods-to-Person）方式の物流センター向け離散イベントシミュレータ"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Hajime Mizuyama" }]
license = { text = "MIT" }
dependencies = [
    "pygame>=2.6.1",
    "simpy>=4.1.1",
]

[project.urls]
Repository = "https://github.com/j54854/simulateDC"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gtp"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
